--- a/navbar.html
+++ b/navbar.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <!-- Design a NavBar -->
+    <h3>navBar</h3>
     <div class="nav-container">
         <ul>
         <li><a href="">Home</a></li>
